# real-world-haskell-exercises

./: Array.hs  BTree.hs  Carrier.hs  DList.hs  Direction.hs  FirstWord.hs  Folds.hs  Glob.hs  GlobRegex.hs  IO.hs  Logger.hs  PasswdAl.hs  PasswdMap.hs  QC-basics.hs  README.md  SimpleJSON.hs  Transpose.hs  TypeClassTest.hs  btree.hs  listCalc.hs
QC/: QC.hs  Run.hs
SimpleJSON/: Main.hs  Prettify.hs  PrettyJSON.hs
mynum/: Num.hs  NumSimple.hs
mypretty/: PrettyJSON.hs  SimpleJSON.hs  mypretty.cabal
mypretty/spec/: Arbitrary.hs
mypretty/src/: PutJSON.hs
