Name:          mypretty
Version:       0.1

Synopsis:      My pretty printing library, with JSON support
Description:

  A simple pretty printing library that "Real World Haskell"
  used to illustrate how to develop a Haskell library.
Author:        Ryan Coopersmith
Maintainer:    ryancoopersmith1@gmail.com

Cabal-Version: >= 1.2

library
  Exposed-Modules: Prettify
                   PrettyJSON
                   SimpleJSON
  Build-Depends:   base >= 2.0
